cmake_minimum_required(VERSION 3.15)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(Q1 "Array/Q1_Two Sum.cpp" "String/Q1087_Brace Expansion.cpp")
add_executable(Q35 "BinarySearch/Q35_Search Insert Position.cpp")
add_executable(Q200 "DepthFirstSearch/Q200_Number of Islands.cpp")
add_executable(Q1087 "String/Q1087_Brace Expansion.cpp")