cmake_minimum_required(VERSION 3.15)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(Q1 "Array/Q1_Two Sum.cpp")
add_executable(Q35 "BinarySearch/Q35_Search Insert Position.cpp")
add_executable(Q200 "DepthFirstSearch/Q200_Number of Islands.cpp")
add_executable(Q1087 "String/Q1087_Brace Expansion.cpp")
add_executable(Q753 "DepthFirstSearch/Q753_Cracking the Safe.cpp")
add_executable(Q1145 "Tree/Q1145_Binary Tree Coloring Game.cpp")
add_executable(Q1197 "BreadthFirstSearch/Q1197_Minimum Knight Moves.cpp")
add_executable(Q1088 "DepthFirstSearch/Q1088_Confusing Number II.cpp")
add_executable(Q489 "DepthFirstSearch/Q489_Robot Room Cleaner.cpp")
add_executable(Q317 "BreadthFirstSearch/Q317_Shortest Distance from All Buildings.cpp")
add_executable(Q410 "BinarySearch/Q410_Split Array Largest Sum.cpp")
add_executable(Q1383 "Heap/Q1383_Maximum Performance of a Team.cpp")